# FlightSearchToolMCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.gemini/: GEMINI.md  settings.json
flight-findr-mcp/: .gitignore  main.py  mcp_server.py  requirements.txt
flight-findr-mcp/scrapers/: pointsyeah.py  seats_aero.py
the_point_finder/: cash_price.py  main.py  mcp_server.py  requirements.txt
the_point_finder/api_clients/: amadeus.py
the_point_finder/scrapers/: google_flights.py  pointsyeah.py  seats_aero.py
web-frontend/: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web-frontend/.github/workflows/: deploy-frontend.yml
web-frontend/src/: App.css  App.tsx  types.ts
web-frontend/src/components/: FlightDealsTable.tsx
web-frontend/src/components/ChatConversation/: index.tsx
web-frontend/src/components/FlightDealsTable/: index.tsx
web-frontend/src/components/MessageBubble/: index.tsx
web-frontend/src/components/MessageList/: index.tsx
web-frontend/src/components/SuggestionBubbles/: index.tsx
web-frontend/src/components/ToolCall/: index.tsx
web-frontend/src/components/WelcomeScreen/: index.tsx
web-frontend/src/hooks/: useChat.ts
web-server/: GEMINI.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web-server/src/: chatHandler.ts  index.ts  sessionManager.ts  suggestionHandler.ts
