[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_point_finder"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A flight deal finder that scrapes various sources for the best points-based deals."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright",
    "beautifulsoup4",
    "requests",
    "lxml",
    "fastmcp",
    "uvicorn",
]

[project.scripts]
the-point-finder-server = "the_point_finder.mcp_server:run"

